# cashfolio

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_asset_customprice_pricecache.py  0003_add_transfers_trades.py  0004_migrate_transfer_trade.py  0005_firefly.py  0006_fx_rate_cache.py  0007_coincap_migration.py  0008_binance_migration.py  0009_remove_asset_icon_url.py
backend/app/: main.py
backend/app/api/v1/: accounts.py  asset_types.py  assets.py  auth.py  firefly.py  fx_rates.py  health.py  holdings.py  trades.py  transfers.py  users.py
backend/app/core/: config.py  db.py  deps.py  security.py
backend/app/models/: __init__.py  account.py  asset.py  asset_type.py  firefly.py  fx_rate_cache.py  trade.py  transfer.py  user.py
backend/app/schemas/: account.py  asset.py  asset_type.py  auth.py  firefly.py  fx_rate.py  holding.py  trade.py  transfer.py  user.py
backend/app/services/: account_summary_service.py  auth_service.py  custom_price_service.py  firefly_service.py  holdings_service.py  portfolio_history_service.py  price_fetcher.py  scheduler.py  trade_import_service.py  transfer_import_service.py
backend/tests/: conftest.py  test_accounts.py  test_assets.py  test_auth.py  test_holdings.py  test_trades.py  test_transfers.py
frontend/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AppLayout.tsx  PageTransition.tsx  (+1 more)
(+31 files in other folders)
